tests/algorithms/x/Java/data_structures/binary_tree/serialize_deserialize_binary_tree.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden197_serialize_deserialize_binary_tree4116155264/001/Main.java:7: error: constructor Empty() is already defined in class Empty
        Empty() {}
        ^
1 error
